# poc-flask-database-seeder

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py
app/database/factories/: facories.py
app/database/models/: base.py  genre.py  movie.py  reservation.py  seat.py  showtime.py  showtime_seat.py  theater.py  user.py
app/enums/: reservation_status.py  showtime_seat_status.py  user_roles.py
migrations/versions/: 00b80a547245_create_users_table.py  254f94106e6a_create_showtimes_table.py  2ef21905a129_create_seats_table.py  5060505f1704_create_genres_table.py  8fabe86c6a77_create_theaters_table.py  a17910534a84_create_genres_movies_table.py  a32b92c7680d_create_movies_table.py  d7d5a51bef6f_create_showtime_seats_table.py  d8c799019f8c_create_reservations_table.py
tests/: conftest.py  test_models.py
