[tool.poetry]
name = "poc-flask-database-seeder"
version = "0.1.0"
description = "POC to validate same database seed strategies"
authors = ["Pedro Dalvy <pedrodalvy@outlook.com>"]
readme = "README.md"

packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
alembic = "^1.14.1"
pymysql = "^1.1.1"
cryptography = "^44.0.0"
flask-sqlalchemy = "^3.1.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
